--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "BattleTank",
-    "version" : "0.0.4",
+    "name": "CounterTank",
+    "version" : "0.0.5",
     "author": {
         "name": "raccoons.lv"
     },
