--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "lodash": "1.3",
         "mysql": "2.0",
         "emailjs": "0.3",
-        "memory-cache": "0.0.5"
+        "memory-cache": "0.0.5",
+        "primus": "2.1"
     },
     "devDependencies": {
         "mocha": "1.12",
