--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "mysql": "2.0",
         "emailjs": "0.3",
         "memory-cache": "0.0.5",
-        "primus": "2.1"
+        "primus": "2.1",
+        "uglify-js": "1.3",
+        "browserchannel": "1.2"
     },
     "devDependencies": {
         "mocha": "1.12",
