--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,11 @@ node_modules/
 bower_components/
 *~
 *.css.map
+*.css
 *.js.map
+*.js
+!public/d/j.js
+!public/d/c.css
+
+!design/**/*.css
+!design/**/*.js
