--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-    "name": "CounterTank",
+    "name": "RaccoonsRocketRacing",
     "version" : "0.0.6",
     "author": {
         "name": "raccoons.lv"
     },
     "dependencies": {
-        "express": "3.0",
-        "socket.io": "0.9",
-        "ws": "0.4",
-        "backbone": "1.0",
-        "lodash": "1.3",
-        "mysql": "2.0",
-        "emailjs": "0.3",
-        "memory-cache": "0.0.5",
-        "primus": "2.1",
-        "uglify-js": "1.3",
-        "browserchannel": "1.2"
+        "express": "4.13",
+        "socket.io": "1.3",
+        "ws": "0.8",
+        "backbone": "1.2",
+        "lodash": "3.10",
+        "mysql": "2.9",
+        "emailjs": "1.0",
+        "memory-cache": "0.1.4",
+        "primus": "4.0",
+        "uglify-js": "2.5",
+        "browserchannel": "2.0"
     },
     "devDependencies": {
-        "mocha": "1.12",
-        "sinon": "1.7",
-        "expect.js": "0.2",
-        "nock": "0.16",
+        "mocha": "2.3",
+        "sinon": "1.17",
+        "expect.js": "0.3",
+        "nock": "2.15",
         "memwatch": "0.2"
     }
 }
