--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "dependencies": {
     "jquery": "2.1",
-    "pixi.js": "3.0"
+    "pixi.js": "3.0",
+    "lodash": "~3.10.1"
   },
   "devDependencies": {
     "sinonjs": "1.10",
-    "assert": "1.3"
+    "assert": "0.1"
   }
 }
