--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-    "name": "RaccoonsRocketRacing",
-    "version" : "0.0.6",
-    "author": {
-        "name": "raccoons.lv"
-    },
-    "dependencies": {
-        "express": "4.13",
-        "socket.io": "1.3",
-        "ws": "0.8",
-        "backbone": "1.2",
-        "lodash": "3.10",
-        "mysql": "2.9",
-        "emailjs": "1.0",
-        "memory-cache": "0.1.4",
-        "primus": "4.0",
-        "uglify-js": "2.5",
-        "browserchannel": "2.0"
-    },
-    "devDependencies": {
-        "mocha": "2.3",
-        "sinon": "1.17",
-        "expect.js": "0.3",
-        "nock": "2.15",
-        "memwatch": "0.2"
-    }
+  "name": "RaccoonsRocketRacing",
+  "version": "0.0.6",
+  "author": {
+    "name": "raccoons.lv"
+  },
+  "dependencies": {
+    "backbone": "1.2",
+    "browserchannel": "2.0",
+    "emailjs": "1.0",
+    "express": "4.13",
+    "lodash": "3.10",
+    "memory-cache": "0.1.4",
+    "mysql": "2.9",
+    "primus": "4.0",
+    "socket.io": "1.3",
+    "uglify-js": "2.5",
+    "ws": "0.8"
+  },
+  "devDependencies": {
+    "mocha": "2.3",
+    "sinon": "1.17",
+    "expect.js": "0.3",
+    "nock": "2.15",
+    "memwatch": "0.2",
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-shell": "^1.1.2"
+  }
 }
