--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "dependencies": {
     "jquery": "2.2",
-    "pixi.js": "3.0",
-    "lodash": "~4.0.1"
+    "lodash": "~4.0.1",
+    "babylonjs": "^2.2.0"
   },
   "devDependencies": {
     "sinonjs": "1.10",
-    "assert": "1.3"
+    "power-assert": "^1.3.1"
   }
 }
