--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "jquery": "3.1",
-    "lodash": "~4.14.1",
+    "lodash": "^4.14.1",
     "babylonjs": "^2.4.0"
   },
   "devDependencies": {
